Fix button group alignment

--- a/css/big-text.css
+++ b/css/big-text.css
@@ -891,6 +891,7 @@ input[type=range]::-webkit-slider-thumb:hover {
     padding: 0;
     border-radius: var(--radius);
     box-shadow: var(--shadow-small);
+    vertical-align: top;
 }
 
 .button-group:not(:last-child) {
